saving work; updating tests

--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -6,30 +6,30 @@
             ]
         }
     },
-    "assemblers": [
-        {
-            "label": "spades-default",
+    "assemblies": {
+        "spades-default": {
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
                 "sample1"
-            ]
+            ],
+            "mode": "single"
         },
-        {
-            "label": "megahit-default",
+        "megahit-default": {
             "algorithm": "megahit",
             "extra_args": "",
             "samples": [
                 "sample1"
-            ]
+            ],
+            "mode": "single"
         },
-        {
-            "label": "unicycler-default",
+        "unicycler-default": {
             "algorithm": "unicycler",
             "extra_args": "",
             "samples": [
                 "sample1"
-            ]
+            ],
+            "mode": "single"
         }
-    ]
+    }
 }
