--- a/yeat/tests/data/configs/paired.cfg
+++ b/yeat/tests/data/configs/paired.cfg
@@ -2,44 +2,42 @@
     "samples": {
         "sample1": {
             "paired": [
-                "yeat/tests/data/short_reads_1.fastq.gz",
-                "yeat/tests/data/short_reads_2.fastq.gz"
+                ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
             ]
         },
         "sample2": {
             "paired": [
-                "yeat/tests/data/Animal_289_R1.fq.gz",
-                "yeat/tests/data/Animal_289_R2.fq.gz"
+                ["yeat/tests/data/Animal_289_R1.fq.gz", "yeat/tests/data/Animal_289_R2.fq.gz"]
             ]
         }
     },
-    "assemblers": [
-        {
-            "label": "spades-default",
+    "assemblies": {
+        "spades-default": {
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
                 "sample1",
                 "sample2"
-            ]
+            ],
+            "mode": "paired"
         },
-        {
-            "label": "megahit-default",
+        "megahit-default": {
             "algorithm": "megahit",
             "extra_args": "",
             "samples": [
                 "sample1",
                 "sample2"
-            ]
+            ],
+            "mode": "paired"
         },
-        {
-            "label": "unicycler-default",
+        "unicycler-default": {
             "algorithm": "unicycler",
             "extra_args": "",
             "samples": [
                 "sample1",
                 "sample2"
-            ]
+            ],
+            "mode": "paired"
         }
-    ]
+    }
 }
