saving work; cleaning up tests

--- a/yeat/tests/data/configs/two_spades.cfg
+++ b/yeat/tests/data/configs/two_spades.cfg
@@ -2,27 +2,26 @@
     "samples": {
         "sample1": {
             "paired": [
-                "yeat/tests/data/short_reads_1.fastq.gz",
-                "yeat/tests/data/short_reads_2.fastq.gz"
+                ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
             ]
         }
     },
-    "assemblers": [
-        {
-            "label": "spades-default",
+    "assemblies": {
+        "spades-default": {
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
                 "sample1"
-            ]
+            ],
+            "mode": "paired"
         },
-        {
-            "label": "spades-meta",
+        "spades-meta": {
             "algorithm": "spades",
             "extra_args": "--meta",
             "samples": [
                 "sample1"
-            ]
+            ],
+            "mode": "paired"
         }
-    ]
+    }
 }
