--- a/yeat/tests/data/configs/megahit.cfg
+++ b/yeat/tests/data/configs/megahit.cfg
@@ -2,19 +2,18 @@
     "samples": {
         "sample1": {
             "paired": [
-                "yeat/tests/data/short_reads_1.fastq.gz",
-                "yeat/tests/data/short_reads_2.fastq.gz"
+                ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
             ]
         }
     },
-    "assemblers": [
-        {
-            "label": "megahit-default",
+    "assemblies": {
+        "megahit-default": {
             "algorithm": "megahit",
             "extra_args": "",
             "samples": [
                 "sample1"
-            ]
+            ],
+            "mode": "paired"
         }
-    ]
+    }
 }
