cleaning up json

--- a/yeat/tests/data/configs/ont.cfg
+++ b/yeat/tests/data/configs/ont.cfg
@@ -6,30 +6,30 @@
             ]
         }
     },
-    "assemblers": [
-        {
-            "label": "flye-default",
+    "assemblies": {
+        "flye-default": {
             "algorithm": "flye",
             "extra_args": "",
             "samples": [
                 "Ecoli_K12_MG1655_R10.3_HAC"
-            ]
+            ],
+            "mode": "oxford"
         },
-        {
-            "label": "canu-default",
+        "canu-default": {
             "algorithm": "canu",
             "extra_args": "genomeSize=4.8m",
             "samples": [
                 "Ecoli_K12_MG1655_R10.3_HAC"
-            ]
+            ],
+            "mode": "oxford"
         },
-        {
-            "label": "unicycler-default",
+        "unicycler-default": {
             "algorithm": "unicycler",
             "extra_args": "",
             "samples": [
                 "Ecoli_K12_MG1655_R10.3_HAC"
-            ]
+            ],
+            "mode": "oxford"
         }
-    ]
+    }
 }
