cleaning up code

--- a/yeat/tests/data/configs/hifi.cfg
+++ b/yeat/tests/data/configs/hifi.cfg
@@ -11,7 +11,7 @@
             ]
         }
     },
-    "assemblers": {
+    "assemblies": {
         "flye-default": {
             "algorithm": "flye",
             "extra_args": "",
