--- a/yeat/tests/data/configs/meta.cfg
+++ b/yeat/tests/data/configs/meta.cfg
@@ -6,7 +6,7 @@
             ]
 	    }
     },
-    "assemblers": {
+    "assemblies": {
         "metaflye-default": {
             "algorithm": "flye",
             "extra_args": "--meta",
