saving work; cleaning up tests

--- a/yeat/tests/data/configs/megahit.cfg
+++ b/yeat/tests/data/configs/megahit.cfg
@@ -1,6 +1,6 @@
 {
     "samples": {
-        "sample1": {
+        "Shigella_sonnei_53G": {
             "paired": [
                 ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
             ]
@@ -11,7 +11,7 @@
             "algorithm": "megahit",
             "extra_args": "",
             "samples": [
-                "sample1"
+                "Shigella_sonnei_53G"
             ],
             "mode": "paired"
         }
