--- a/yeat/tests/data/configs/paired.cfg
+++ b/yeat/tests/data/configs/paired.cfg
@@ -1,13 +1,8 @@
 {
     "samples": {
-        "sample1": {
+        "Shigella_sonnei_53G": {
             "paired": [
                 ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
-            ]
-        },
-        "sample2": {
-            "paired": [
-                ["yeat/tests/data/Animal_289_R1.fq.gz", "yeat/tests/data/Animal_289_R2.fq.gz"]
             ]
         }
     },
@@ -16,8 +11,7 @@
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
-                "sample1",
-                "sample2"
+                "Shigella_sonnei_53G"
             ],
             "mode": "paired"
         },
@@ -25,8 +19,7 @@
             "algorithm": "megahit",
             "extra_args": "",
             "samples": [
-                "sample1",
-                "sample2"
+                "Shigella_sonnei_53G"
             ],
             "mode": "paired"
         },
@@ -34,8 +27,7 @@
             "algorithm": "unicycler",
             "extra_args": "",
             "samples": [
-                "sample1",
-                "sample2"
+                "Shigella_sonnei_53G"
             ],
             "mode": "paired"
         }
