--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -1,6 +1,6 @@
 {
     "samples": {
-        "sample1": {
+        "Shigella_sonnei_53G": {
             "single": [
                 "yeat/tests/data/short_reads_1.fastq.gz"
             ]
@@ -11,7 +11,7 @@
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
-                "sample1"
+                "Shigella_sonnei_53G"
             ],
             "mode": "single"
         },
@@ -19,7 +19,7 @@
             "algorithm": "megahit",
             "extra_args": "",
             "samples": [
-                "sample1"
+                "Shigella_sonnei_53G"
             ],
             "mode": "single"
         },
@@ -27,7 +27,7 @@
             "algorithm": "unicycler",
             "extra_args": "",
             "samples": [
-                "sample1"
+                "Shigella_sonnei_53G"
             ],
             "mode": "single"
         }
