--- a/yeat/tests/data/configs/two_samples.cfg
+++ b/yeat/tests/data/configs/two_samples.cfg
@@ -1,8 +1,13 @@
 {
     "samples": {
-        "Shigella_sonnei_53G": {
+        "sample1": {
             "paired": [
                 ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
+            ]
+        },
+        "sample2": {
+            "paired": [
+                ["yeat/tests/data/Animal_289_R1.fq.gz", "yeat/tests/data/Animal_289_R2.fq.gz"]
             ]
         }
     },
@@ -11,15 +16,8 @@
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
-                "Shigella_sonnei_53G"
-            ],
-            "mode": "paired"
-        },
-        "spades-meta": {
-            "algorithm": "spades",
-            "extra_args": "--meta",
-            "samples": [
-                "Shigella_sonnei_53G"
+                "sample1",
+                "sample2"
             ],
             "mode": "paired"
         }
