hifiasm_meta instead of hifiasm-meta

--- a/yeat/tests/data/configs/meta.cfg
+++ b/yeat/tests/data/configs/meta.cfg
@@ -15,8 +15,8 @@
             ],
             "mode": "pacbio"
         },
-        "hifiasm-meta-default": {
-            "algorithm": "hifiasm-meta",
+        "hifiasm_meta-default": {
+            "algorithm": "hifiasm_meta",
             "extra_args": "",
             "samples": [
                 "zymoBIOMICS_D6331"
