--- a/yeat/workflow/Snakefile
+++ b/yeat/workflow/Snakefile
@@ -8,7 +8,7 @@
 # -------------------------------------------------------------------------------------------------
 
 from yeat.config.config import AssemblyConfig
-from yeat.workflows.snakefiles import get_expected_files
+from yeat.workflow.aux import get_expected_files
 
 
 cfg = AssemblyConfig(config["data"], config["threads"])
