Updating config file (#64)

--- a/yeat/tests/data/configs/hifi.cfg
+++ b/yeat/tests/data/configs/hifi.cfg
@@ -11,38 +11,38 @@
             ]
         }
     },
-    "assemblers": [
-        {
-            "label": "flye-default",
+    "assemblies": {
+        "flye-default": {
             "algorithm": "flye",
             "extra_args": "",
             "samples": [
                 "WGS_of_E._coli_K12_with_PacBio_HiFi"
-            ]
+            ],
+            "mode": "pacbio"
         },
-        {
-            "label": "hicanu-default",
+        "hicanu-default": {
             "algorithm": "canu",
             "extra_args": "genomeSize=4.8m",
             "samples": [
                 "WGS_of_E._coli_K12_with_PacBio_HiFi"
-            ]
+            ],
+            "mode": "pacbio"
         },
-        {
-            "label": "hifiasm-default",
+        "hifiasm-default": {
             "algorithm": "hifiasm",
             "extra_args": "",
             "samples": [
                 "chr11-2M"
-            ]
+            ],
+            "mode": "pacbio"
         },
-        {
-            "label": "unicycler-default",
+        "unicycler-default": {
             "algorithm": "unicycler",
             "extra_args": "",
             "samples": [
                 "WGS_of_E._coli_K12_with_PacBio_HiFi"
-            ]
+            ],
+            "mode": "pacbio"
         }
-    ]
+    }
 }
