--- a/yeat/tests/data/configs/meta.cfg
+++ b/yeat/tests/data/configs/meta.cfg
@@ -6,30 +6,30 @@
             ]
 	    }
     },
-    "assemblers": [
-        {
-            "label": "metaflye-default",
+    "assemblies": {
+        "metaflye-default": {
             "algorithm": "flye",
             "extra_args": "--meta",
             "samples": [
                 "zymoBIOMICS_D6331"
-            ]
+            ],
+            "mode": "pacbio"
         },
-        {
-            "label": "hifiasm-meta-default",
-            "algorithm": "hifiasm-meta",
+        "hifiasm_meta-default": {
+            "algorithm": "hifiasm_meta",
             "extra_args": "",
             "samples": [
                 "zymoBIOMICS_D6331"
-            ]
+            ],
+            "mode": "pacbio"
         },
-        {
-            "label": "metamdbg-default",
+        "metamdbg-default": {
             "algorithm": "metamdbg",
             "extra_args": "",
             "samples": [
                 "zymoBIOMICS_D6331"
-            ]
+            ],
+            "mode": "pacbio"
         }
-    ]
+    }
 }
