--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -1,35 +1,35 @@
 {
     "samples": {
-        "sample1": {
+        "Shigella_sonnei_53G": {
             "single": [
                 "yeat/tests/data/short_reads_1.fastq.gz"
             ]
         }
     },
-    "assemblers": [
-        {
-            "label": "spades-default",
+    "assemblies": {
+        "spades-default": {
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
-                "sample1"
-            ]
+                "Shigella_sonnei_53G"
+            ],
+            "mode": "single"
         },
-        {
-            "label": "megahit-default",
+        "megahit-default": {
             "algorithm": "megahit",
             "extra_args": "",
             "samples": [
-                "sample1"
-            ]
+                "Shigella_sonnei_53G"
+            ],
+            "mode": "single"
         },
-        {
-            "label": "unicycler-default",
+        "unicycler-default": {
             "algorithm": "unicycler",
             "extra_args": "",
             "samples": [
-                "sample1"
-            ]
+                "Shigella_sonnei_53G"
+            ],
+            "mode": "single"
         }
-    ]
+    }
 }
