--- a/yeat/tests/data/configs/example.cfg
+++ b/yeat/tests/data/configs/example.cfg
@@ -2,14 +2,12 @@
     "samples": {
         "sample1": {
             "paired": [
-                "yeat/tests/data/short_reads_1.fastq.gz",
-                "yeat/tests/data/short_reads_2.fastq.gz"
+                ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
             ]
         },
         "sample2": {
             "paired": [
-                "yeat/tests/data/Animal_289_R1.fq.gz",
-                "yeat/tests/data/Animal_289_R2.fq.gz"
+                ["yeat/tests/data/Animal_289_R1.fq.gz", "yeat/tests/data/Animal_289_R2.fq.gz"]
             ]
         },
         "sample3": {
@@ -23,31 +21,31 @@
             ]
         }
     },
-    "assemblers": [
-        {
-            "label": "spades-default",
+    "assemblies": {
+        "spades-default": {
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
                 "sample1",
                 "sample2"
-            ]
+            ],
+            "mode": "paired"
         },
-        {
-            "label": "hicanu",
+        "hicanu": {
             "algorithm": "canu",
             "extra_args": "genomeSize=4.8m",
             "samples": [
                 "sample3"
-            ]
+            ],
+            "mode": "pacbio"
         },
-        {
-            "label": "flye_ONT",
+        "flye_ONT": {
             "algorithm": "flye",
             "extra_args": "",
             "samples": [
                 "sample4"
-            ]
+            ],
+            "mode": "oxford"
         }
-    ]
+    }
 }
