cleaning up code

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,5 +7,6 @@ markers =
     nano: oxford nanopore-read tests
     bandage: bandage required tests
     linux: linux required test
+    grid: grid required tests
 filterwarnings =
     ignore::DeprecationWarning:ratelimiter.*
