--- a/pytest.ini
+++ b/pytest.ini
@@ -5,6 +5,7 @@ markers =
     illumina: illumina short-read tests
     hifi: pacbio hifi-read tests
     nano: oxford nanopore-read tests
+    hybrid: hybrid tests
     bandage: bandage required tests
     linux: linux required test
     grid: grid required tests
