--- a/.coveragerc
+++ b/.coveragerc
@@ -6,3 +6,11 @@ branch = True
 omit = 
     */yeat/_version.py
     */yeat/tests/*
+    */yeat/workflow/Bandage
+    */yeat/workflow/Hybrid
+    */yeat/workflow/Oxford
+    */yeat/workflow/Pacbio
+    */yeat/workflow/Paired
+    */yeat/workflow/Shared
+    */yeat/workflow/Single
+    */yeat/workflow/Snakefile
