--- a/yeat/tests/data/configs/auto_two_samples.cfg
+++ b/yeat/tests/data/configs/auto_two_samples.cfg
@@ -1,5 +1,13 @@
 {
     "samples": {
+        "Animal_289": {
+            "paired": [
+                [
+                    "yeat/tests/data/Animal_289_R1.fq.gz",
+                    "yeat/tests/data/Animal_289_R2.fq.gz"
+                ]
+            ]
+        },
         "short_reads": {
             "paired": [
                 [
@@ -14,6 +22,7 @@
             "algorithm": "spades",
             "extra_args": "",
             "samples": [
+                "Animal_289",
                 "short_reads"
             ],
             "mode": "paired"
