cleaning up tests

--- a/yeat/tests/data/configs/auto_one_sample.cfg
+++ b/yeat/tests/data/configs/auto_one_sample.cfg
@@ -6,7 +6,10 @@
                     "yeat/tests/data/short_reads_1.fastq.gz",
                     "yeat/tests/data/short_reads_2.fastq.gz"
                 ]
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
