--- a/yeat/tests/data/configs/example.cfg
+++ b/yeat/tests/data/configs/example.cfg
@@ -3,22 +3,34 @@
         "sample1": {
             "paired": [
                 ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         },
         "sample2": {
             "paired": [
                 ["yeat/tests/data/Animal_289_R1.fq.gz", "yeat/tests/data/Animal_289_R2.fq.gz"]
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         },
         "sample3": {
             "pacbio-hifi": [
                 "yeat/tests/data/ecoli.fastq.gz"
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         },
         "sample4": {
             "nano-hq": [
                 "yeat/tests/data/ecolk12mg1655_R10_3_guppy_345_HAC.fastq.gz"
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
