--- a/yeat/tests/data/configs/hifi.cfg
+++ b/yeat/tests/data/configs/hifi.cfg
@@ -3,12 +3,18 @@
         "WGS_of_E._coli_K12_with_PacBio_HiFi": {
             "pacbio-hifi": [
                 "yeat/tests/data/ecoli.fastq.gz"
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         },
         "chr11-2M": {
             "pacbio-hifi": [
                 "yeat/tests/data/chr11-2M.fq.gz"
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
