--- a/yeat/tests/data/configs/hybrid.cfg
+++ b/yeat/tests/data/configs/hybrid.cfg
@@ -6,7 +6,10 @@
             ],
             "pacbio-corr": [
                 "yeat/tests/data/long_reads_high_depth.fastq.gz"
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
