--- a/yeat/tests/data/configs/meta.cfg
+++ b/yeat/tests/data/configs/meta.cfg
@@ -3,7 +3,10 @@
         "zymoBIOMICS_D6331": {
 	        "pacbio-hifi": [
                 "yeat/tests/data/zymoD6331std-ecoli-ten-percent.fq.gz"
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
 	    }
     },
     "assemblies": {
