--- a/yeat/tests/data/configs/auto_two_samples.cfg
+++ b/yeat/tests/data/configs/auto_two_samples.cfg
@@ -6,7 +6,10 @@
                     "yeat/tests/data/Animal_289_R1.fq.gz",
                     "yeat/tests/data/Animal_289_R2.fq.gz"
                 ]
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         },
         "short_reads": {
             "paired": [
@@ -14,7 +17,10 @@
                     "yeat/tests/data/short_reads_1.fastq.gz",
                     "yeat/tests/data/short_reads_2.fastq.gz"
                 ]
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
