--- a/yeat/tests/data/configs/megahit.cfg
+++ b/yeat/tests/data/configs/megahit.cfg
@@ -3,7 +3,10 @@
         "Shigella_sonnei_53G": {
             "paired": [
                 ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
