--- a/yeat/tests/data/configs/ont.cfg
+++ b/yeat/tests/data/configs/ont.cfg
@@ -3,7 +3,10 @@
         "Ecoli_K12_MG1655_R10.3_HAC": {
             "nano-hq": [
                 "yeat/tests/data/ecolk12mg1655_R10_3_guppy_345_HAC.fastq.gz"
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
