--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -3,7 +3,10 @@
         "Shigella_sonnei_53G": {
             "single": [
                 "yeat/tests/data/short_reads_1.fastq.gz"
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
