--- a/yeat/tests/data/configs/two_samples.cfg
+++ b/yeat/tests/data/configs/two_samples.cfg
@@ -3,12 +3,18 @@
         "sample1": {
             "paired": [
                 ["yeat/tests/data/short_reads_1.fastq.gz", "yeat/tests/data/short_reads_2.fastq.gz"]
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         },
         "sample2": {
             "paired": [
                 ["yeat/tests/data/Animal_289_R1.fq.gz", "yeat/tests/data/Animal_289_R2.fq.gz"]
-            ]
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
         }
     },
     "assemblies": {
