--- a/yeat/tests/data/configs/paired.cfg
+++ b/yeat/tests/data/configs/paired.cfg
@@ -33,6 +33,14 @@
                 "Shigella_sonnei_53G"
             ],
             "mode": "paired"
+        },
+        "velvet-default": {
+            "algorithm": "velvet",
+            "extra_args": "",
+            "samples": [
+                "Shigella_sonnei_53G"
+            ],
+            "mode": "paired"
         }
     }
 }
