--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -33,6 +33,14 @@
                 "Shigella_sonnei_53G"
             ],
             "mode": "single"
+        },
+        "velvet-default": {
+            "algorithm": "unicycler",
+            "extra_args": "",
+            "samples": [
+                "Shigella_sonnei_53G"
+            ],
+            "mode": "single"
         }
     }
 }
