--- a/environment.yml
+++ b/environment.yml
@@ -25,5 +25,10 @@ dependencies:
     - nanofilt>=2.3
     - nanoplot>=1.20
     - hifiasm>=0.19
-    - hifiasm_meta>=hamtv0.3
+    - hifiasm_meta=hamtv0.2
     - gfatools>=0.5
+    - plass>=4.687d7
+    - gfastats>=1.3
+    - samtools>=1.21
+    - bcftools>=1.21
+    - bowtie2>=2.5
