--- a/environment.yml
+++ b/environment.yml
@@ -27,8 +27,7 @@ dependencies:
     - hifiasm>=0.19
     - hifiasm_meta=hamtv0.2
     - gfatools>=0.5
-    - plass>=4.687d7
-    - gfastats>=1.3
+    - plass>=4.687d7=
     - samtools>=1.21
     - bcftools>=1.21
     - bowtie2>=2.5
