--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -34,6 +34,14 @@
             ],
             "mode": "single"
         },
+        "penguin-default": {
+            "algorithm": "penguin",
+            "extra_args": "",
+            "samples": [
+                "Shigella_sonnei_53G"
+            ],
+            "mode": "paired"
+        },
         "velvet-default": {
             "algorithm": "unicycler",
             "extra_args": "",
