cleaning up tests

--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -40,7 +40,7 @@
             "samples": [
                 "Shigella_sonnei_53G"
             ],
-            "mode": "paired"
+            "mode": "single"
         },
         "velvet-default": {
             "algorithm": "unicycler",
