--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -43,7 +43,7 @@
             "mode": "single"
         },
         "velvet-default": {
-            "algorithm": "unicycler",
+            "algorithm": "velvet",
             "extra_args": "",
             "samples": [
                 "Shigella_sonnei_53G"
