New short-read assembler: VelvetOptimizer (#81)

--- a/yeat/tests/data/configs/single.cfg
+++ b/yeat/tests/data/configs/single.cfg
@@ -33,6 +33,22 @@
                 "Shigella_sonnei_53G"
             ],
             "mode": "single"
+        },
+        "penguin-default": {
+            "algorithm": "penguin",
+            "extra_args": "",
+            "samples": [
+                "Shigella_sonnei_53G"
+            ],
+            "mode": "single"
+        },
+        "velvet-default": {
+            "algorithm": "velvet",
+            "extra_args": "",
+            "samples": [
+                "Shigella_sonnei_53G"
+            ],
+            "mode": "single"
         }
     }
 }
