--- a/yeat/tests/data/configs/meta.cfg
+++ b/yeat/tests/data/configs/meta.cfg
@@ -1,13 +1,21 @@
 {
     "samples": {
         "zymoBIOMICS_D6331": {
-	        "pacbio-hifi": [
+            "pacbio-hifi": [
                 "yeat/tests/data/zymoD6331std-ecoli-ten-percent.fq.gz"
             ],
             "downsample": 0,
             "genome_size": 0,
             "coverage_depth": 150
-	    }
+        },
+        "ZymoBIOMICS_Gut_Microbiome_Standard": {
+            "nano-raw": [
+                "yeat/tests/data/SRR23926885.fastq.gz"
+            ],
+            "downsample": 0,
+            "genome_size": 0,
+            "coverage_depth": 150
+        }
     },
     "assemblies": {
         "metaflye-default": {
@@ -26,13 +34,21 @@
             ],
             "mode": "pacbio"
         },
-        "metamdbg-default": {
+        "metamdbg-hifi-default": {
             "algorithm": "metamdbg",
             "extra_args": "",
             "samples": [
                 "zymoBIOMICS_D6331"
             ],
             "mode": "pacbio"
+        },
+        "metamdbg-ont-default": {
+            "algorithm": "metamdbg",
+            "extra_args": "",
+            "samples": [
+                "ZymoBIOMICS_Gut_Microbiome_Standard"
+            ],
+            "mode": "oxford"
         }
     }
 }
