Update environment.yml (#88)
- samtools 1.21 was leading to a dependency conflict hell
- pulp 2.8.0 was leading to an Attr. Err.: no attr. 'list_solvers', so pinned to drop back to 2.7.0 which was working on an earlier install

--- a/environment.yml
+++ b/environment.yml
@@ -29,6 +29,7 @@ dependencies:
     - hifiasm_meta=hamtv0.2
     - gfatools>=0.5
     - plass>=4.687d7
-    - samtools>=1.21
+    - samtools=1.20
     - bowtie2>=2.5
     - pilon>=1.24
+    - pulp=2.7.0
