--- a/yeat/workflow/Snakefile
+++ b/yeat/workflow/Snakefile
@@ -14,6 +14,10 @@ cfg = AssemblyConfig(config["data"], config["threads"], config["bandage"])
 config["samples"] = cfg.samples
 config["assemblies"] = cfg.assemblies
 
+print(cfg)
+print(config)
+assert 0
+
 
 rule all:
     input:
