--- a/environment.yml
+++ b/environment.yml
@@ -5,34 +5,34 @@ channels:
     - defaults
 dependencies:
     - bandage>=0.9
-    - black=22.10
+    - black=24.3
+    - bowtie2>=2.5
+    - canu>=2.2
+    - chopper>=0.9
     - fastp>=0.23
     - fastqc>=0.11
+    - flye>=2.9
+    - gfatools>=0.5
     - gzip>=1.7
+    - hifiasm>=0.19
+    - hifiasm_meta>=hamtv0.3
     - mash>=2.3
     - megahit>=1.2
+    - metamdbg>=1.1
+    - nanofilt>=2.3
+    - nanoplot>=1.20
     - pandas>=1.4
+    - pilon>=1.24
+    - plass>=4.687d7
+    - pulp=2.7
     - pytest>=7.1
     - pytest-cov>=3.0
-    - python=3.9
+    - python>=3.10
     - quast>=5.0
+    - samtools=1.20
     - seqtk>=1.3
+    - snakefmt=0.11
     - snakemake=7.32
-    - pulp=2.7
     - spades>=3.15
     - unicycler>=0.4
     - versioneer>=0.21
-    - canu>=2.2
-    - flye>=2.9
-    - nanofilt>=2.3
-    - nanoplot>=1.20
-    - hifiasm>=0.19
-    - hifiasm_meta=hamtv0.2
-    - gfatools>=0.5
-    - plass>=4.687d7
-    - samtools=1.20
-    - bowtie2>=2.5
-    - pilon>=1.24
-    - pulp=2.7
-    - chopper>=0.9
-    - snakefmt>=0.11
