--- a/yeat/tests/data/configs/hybrid.toml
+++ b/yeat/tests/data/configs/hybrid.toml
@@ -1,3 +1,6 @@
+[global_settings]
+skip_filter = true
+
 [samples.hybrid_Shigella_sonnei_53G]
 illumina = "yeat/tests/data/short_reads_?.fastq.gz"
 pacbio_hifi = "yeat/tests/data/long_reads_high_depth.fastq.gz"
