--- a/.coveragerc
+++ b/.coveragerc
@@ -6,11 +6,5 @@ branch = True
 omit = 
     */yeat/_version.py
     */yeat/tests/*
-    */yeat/workflow/Bandage
-    */yeat/workflow/Hybrid
-    */yeat/workflow/Oxford
-    */yeat/workflow/Pacbio
-    */yeat/workflow/Paired
-    */yeat/workflow/Shared
-    */yeat/workflow/Single
-    */yeat/workflow/Snakefile
+    */yeat/workflow/*.smk
+    */yeat/workflow/qc/*.smk
