--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,5 @@ yeat/tests/data/SRR23926885.fastq.gz filter=lfs diff=lfs merge=lfs -text
 yeat/tests/data/ecoli.fastq.gz filter=lfs diff=lfs merge=lfs -text
 yeat/tests/data/ecolk12mg1655_R10_3_guppy_345_HAC.fastq.gz filter=lfs diff=lfs merge=lfs -text
 yeat/tests/data/zymoD6331std-ecoli-ten-percent.fq.gz filter=lfs diff=lfs merge=lfs -text
+yeat/tests/data/Animal_289_R1.fq.gz filter=lfs diff=lfs merge=lfs -text
+yeat/tests/data/Animal_289_R2.fq.gz filter=lfs diff=lfs merge=lfs -text
