--- a/environment.yml
+++ b/environment.yml
@@ -32,8 +32,8 @@ dependencies:
     - quast>=5.0
     - samtools=1.20
     - seqtk>=1.3
-    - snakefmt=0.11
-    - snakemake=7.32
+    - snakefmt=0.10
+    - snakemake>=9.11
     - spades>=3.15
     - unicycler>=0.4
     - versioneer>=0.21
