--- a/environment.yml
+++ b/environment.yml
@@ -32,6 +32,7 @@ dependencies:
     - quast>=5.0
     - samtools=1.20
     - seqtk>=1.3
+    - snakemake-executor-plugin-slurm>=1.7
     - snakefmt=0.10
     - snakemake>=9.3
     - spades>=3.15
