--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,9 @@ yeat-auto = "yeat.cli.yeat_auto:main"
 
 
 [build-system]
-requires = ["setuptools", "setuptools-scm"]
+requires = ["setuptools>=80", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 
 [tool.setuptools_scm]
-include-package-data = true
+version_file = "yeat/_version.py"
