--- a/environment.yml
+++ b/environment.yml
@@ -1,8 +1,3 @@
-name: yeat
-channels:
-    - conda-forge
-    - bioconda
-    - defaults
 dependencies:
     - bandage>=0.9
     - black=24.3
@@ -19,7 +14,7 @@ dependencies:
     - hifiasm_meta>=hamtv0.3
     - mash>=2.3
     - megahit>=1.2
-    - metamdbg>=1.0
+    - metamdbg=1.0
     - nanofilt>=2.3
     - nanoplot>=1.20
     - pandas>=1.4
@@ -32,7 +27,7 @@ dependencies:
     - quast>=5.0
     - samtools=1.20
     - seqtk>=1.3
-    - snakemake-executor-plugin-slurm>=1.7
+    - snakemake-executor-plugin-slurm>=1.2
     - snakefmt=0.10
     - snakemake>=9.3
     - spades>=3.15
