--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
     - hifiasm_meta>=hamtv0.3
     - mash>=2.3
     - megahit>=1.2
-    - metamdbg=1.0
+    - metamdbg>=1.0
     - nanofilt>=2.3
     - nanoplot>=1.20
     - pandas>=1.4
