--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
     - hifiasm_meta>=hamtv0.3
     - mash>=2.3
     - megahit>=1.2
-    - metamdbg>=1.1
+    - metamdbg>=1.0
     - nanofilt>=2.3
     - nanoplot>=1.20
     - pandas>=1.4
@@ -32,8 +32,8 @@ dependencies:
     - quast>=5.0
     - samtools=1.20
     - seqtk>=1.3
-    - snakefmt=0.11
-    - snakemake=7.32
+    - snakemake-executor-plugin-slurm>=1.2
+    - snakefmt=0.10
+    - snakemake>=9.3
     - spades>=3.15
     - unicycler>=0.4
-    - versioneer>=0.21
