--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@ yeat/tests/data/ecolk12mg1655_R10_3_guppy_345_HAC.fastq.gz filter=lfs diff=lfs m
 yeat/tests/data/zymoD6331std-ecoli-ten-percent.fq.gz filter=lfs diff=lfs merge=lfs -text
 yeat/tests/data/Animal_289_R1.fq.gz filter=lfs diff=lfs merge=lfs -text
 yeat/tests/data/Animal_289_R2.fq.gz filter=lfs diff=lfs merge=lfs -text
+yeat/tests/data/ecoli_hifi_subset24x.fastq.gz filter=lfs diff=lfs merge=lfs -text
+yeat/tests/data/ecoli_ont_subset50x.fastq.gz filter=lfs diff=lfs merge=lfs -text
