--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
     - bowtie2>=2.5
     - canu>=2.2
     - chopper>=0.9
+    - cmake>=3.31
     - fastp>=0.23
     - fastqc>=0.11
     - flye>=2.9
@@ -18,9 +19,11 @@ dependencies:
     - hifiasm>=0.19
     - hifiasm_meta>=hamtv0.3
     - mash>=2.3
+    - megahit>=1.2
     - metamdbg>=1.0
     - nanofilt>=2.3
     - nanoplot>=1.20
+    - pkg-config>=0.29
     - pandas>=1.4
     - pilon>=1.24
     - plass>=4.687d7
@@ -29,6 +32,7 @@ dependencies:
     - pytest-cov>=3.0
     - python>=3.12
     - quast>=5.0
+    - rust>=1.90
     - samtools=1.20
     - seqtk>=1.3
     - snakemake-executor-plugin-slurm>=1.2
